# ktm-converter

./: .env.example  .gitignore  GEBRUIK_TOOL_STAPPENPLAN.txt  HOWTO.md  PROJECT_CONTEXT_KTM.md  config.py  handles_draft.txt  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  shopify_skus.json  single_x_handles.csv
cache/: upload_shopify.py
converter/: .env.example  package-lock.json  package.json
docs/: git_cursor_github.md  github-actions-job-worker.yml  metafields_manager_export.md  shopify_cache_en_scheduling.md  shopify_env.md  supabase-scheduler.md  workflow.md  workflow_nieuwe_producten.txt  zbh2bike_ymm.md
modules/: category_mapper.py  customs_mapping.py  delta_handles.py  env_loader.py  excluded_report.py  exporter.py  image_manager.py  image_resolve.py  metafields_manager_export.py  pricing_loader.py  shopify_client.py  shopify_collections.py  shopify_export_images_lib.py  shopify_supabase_mirror.py  sku_probe.py  xml_loader.py  ymm_export.py
output/: draft_products.csv  replacement_shopify_overlap.csv
scripts/: analyse_categories.py  bootstrap_0150_sync_state_from_csv.py  bootstrap_pricelist_sync_state_from_csv.py  bootstrap_state_from_shopify_export.py  build_customs_mapping_from_shopify_types.py  build_customs_supabase_staging_full_catalog.py  build_customs_supabase_staging_missing.py  build_customs_type_hs_supabase_mapping.py  build_pricelist_supabase_staging.py  build_ymm_add_delete_delta.py  check_ymm_sku.py  compare_xml_variant_counts_to_supabase.py  dedupe_ymm_update_csv.py  export_delta_app_imports.py  fetch_input_sftp.py  (+32 more)
(+46 files in other folders)
