[project]
name = "ktm_project"
version = "0.0.0"
requires-python = ">=3.10,<3.14"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [".venv", ".ruff-venv"]

[tool.ruff.lint]
# Strikte basis: Pyflakes + pycodestyle errors (geen massale style-migratie op legacy code)
select = ["E4", "E7", "E9", "F"]
ignore = [
    "E402",  # module level import not at top (veel scripts met sys.path)
    "E731",  # lambda assignment
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]

[tool.ruff.format]
quote-style = "double"
